--- a/src/App.css
+++ b/src/App.css
@@ -101,6 +101,11 @@
   background-color: rgba(255,255,255,0.25);
 }
 
+.dropzoneActive {
+  background-color: rgba(255,255,255,0.25) !important;
+  outline-offset: 0.5em;
+}
+
 .dropzone {
   width: 50vw;
   padding-top: 5em;
